A couple of bug fixes and style changes (style bugs on safari still persist)

--- a/src/app/core/nav/nav.component.scss
+++ b/src/app/core/nav/nav.component.scss
@@ -18,6 +18,8 @@
 	padding: 0 3px 0 3px;
 	font-weight: bold;
 	letter-spacing: 0px;
+	overflow: hidden;
+	white-space: nowrap;
 }
 
 .background-image {
